# rs-glfw3

./: .gitignore  Cargo.toml  README.md  build.rs
c_code/: wrapper.h
src/: bindings.rs  lib.rs
